# lamport-haskell

./: LICENSE  Lamport.cabal  README.md  stack.yaml
src/: KeyReveal.hs  LamUtils.hs  Lamport.hs
