cabal-version:       >=1.10
name:                Lamport
version:             0.1.1.0
license:             MIT
description:         A naive implementation of the Lamport one-time signature scheme written in Haskell.
license-file:        LICENSE
author:              Michael Di Felice
maintainer:          difelice.michael@gmail.com
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Lamport
  other-modules:       LamUtils
                     , KeyReveal
  hs-source-dirs:      src
  build-depends:       base >=4.14
                     , binary
                     , bitvec >= 1.1.1.0
                     , bytestring
                     , cryptohash-sha256
                     , memory
                     , random-bytestring
                     , utf8-string
                     , vector
  default-language:    Haskell2010
